auf WebSocket umgebaut (läuft)

--- a/DemoClient/App.config
+++ b/DemoClient/App.config
@@ -4,7 +4,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <appSettings>
-    <add key="TcpServer" value="localhost"/>
-    <add key="TcpServerPort" value="1337"/>
+    <add key="PlayerAddress" value="ws://localhost:57570"/>
   </appSettings>
 </configuration>
